--- a/Estudos-Front-End/Windows-11-Web/css/style.css
+++ b/Estudos-Front-End/Windows-11-Web/css/style.css
@@ -10,7 +10,7 @@
   font-weight: 400;
   color: white;
 }
-html{
+html {
   height: 100%;
   width: 100%;
   background: no-repeat url("../imgs/wallpaperEscuro.jpg");
@@ -99,11 +99,11 @@ html{
   height: 27px;
   padding: 5px;
 }
-.iconBar:hover{
+.iconBar:hover {
   background-color: rgba(255, 255, 255, 0.281);
   cursor: pointer;
 }
-.iconeArea:hover{
+.iconeArea:hover {
   background-color: rgba(255, 255, 255, 0.281);
   cursor: pointer;
 }
@@ -130,15 +130,6 @@ html{
   width: 100%;
 }
 
-#powerShelGif {
-  height: 500px;
-  width: 500px;
-  display: none;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
 #erro {
   display: none;
   position: absolute;
@@ -147,7 +138,7 @@ html{
   transform: translate(-50%, -50%);
 }
 #aside {
-  z-index: 999;  
+  z-index: 999;
 }
 .ativo {
   position: fixed;
@@ -189,4 +180,64 @@ html{
   display: block;
   width: 100%;
   height: 100%;
+}
+#terminal {
+  display: none;
+  width: 85vw;
+  height: 70vh;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#terminalTop {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 20px;
+  background-color: deepskyblue;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+#terminalTopClosed {
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+#terminalContent {
+  display: flex;
+  flex-direction: column;
+  height: 95%;
+  background-color: darkblue;
+  border: 2px solid deepskyblue;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+#terminalContentInput {
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+}
+
+label {
+  margin-right: 5px;
+}
+
+input {
+  position: relative;
+  background: transparent;
+  box-sizing: border-box;
+  border: none;
+  height: 15px;
+  color: white;
+  font-size: 15px;
+  width: 63%;
+  outline: none;
+}
+
+#terminalExecution {
+  margin-top: 20px;
 }
